[package]
name = "memer_rs"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
rusqlite = "0.29.0"
cpython = "0.7.1"
serde_json = "1.0.96"
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
log = "0.4.17"
fern = "0.6.2"
chrono = "0.4.24"
rand = "0.8.5"